--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+h1{
+  font-size:3em;
   text-align: center;
+  margin-bottom: 20px;
+}
+.navbar{
+  background-color: aqua;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form{
+  width:700px;
+  margin:0 auto;
+  background:white;
+  border-radius:10px;
+  margin-bottom:20px;
+  border: 2px solid black;
+  padding: 30px 20px;
+}
+input, .floating-placeholder{
+  font-size:20pt;
+  line-height:2.6em;
+  height:2.6em;
+  margin:0;
+  padding:0;
+  width:100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+select {
+  outline: 0;
+  background-image: none;
+  width: 100%;
+  font-size:20pt;
+  line-height:2.6em;
+  height:2.6em;
+  cursor: pointer;
+  margin-bottom: 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.submitbutton {
+  background-color: #04AA6D; /* Green */
+  border: none;
   color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+   margin-left: 300px;
+   border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  height: 50px;
+  border: 2px solid black;
+  display: flex;
+  margin: 20px;
+  font-size: 20px;
+  color: brown;
 }
